--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                     function nextPage() {
                         window.location.href = "yes.html";
                     }
-                    
+                    let x=1
                     function moveButton() {
                         var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth) - 85;
                         var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight) - 48;
                         document.getElementById('noButton').style.left = `${x}px`;
                         document.getElementById('noButton').style.top = `${y}px`;
+                        x++
+                        if(x==4){
+                            alert('Why so slow? Dont you wanna eat burger')
+                        }
                     }
                 </script> 
             </div>
