--- a/yes.html
+++ b/yes.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="./yes_style.css">
-        
-    </head> 
-    <body>
-        <div class="container">
-            <div >
-                <h1 class = "header_text">Yeeeyyyy!!</h1>
-            </div>
-            <div class="gif_container">
-                <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
-            </div>
+
+<head>
+    <link rel="stylesheet" href="./yes_style.css">
+
+</head>
+
+<body>
+    <div class="yes_container">
+        <div class="gif_container">
+            <video autoplay loop src="/asset/yes.mp4" alt="Cute animated illustration">
         </div>
-       
-    </body> 
+        <div>
+            <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+            <h1 class="header_text1" >Yeeehhhhehhhyyyy!!</h1>
+        </div>
+        <div class="gif_container">
+            <video autoplay loop src="/asset/yes1.mp4" alt="Cute animated illustration">
+        </div>
+    </div>
+</body>
+
 </html>
