--- a/no.html
+++ b/no.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
-            <video class="no_container" autoplay loop src="/asset/no.mp4" alt="Cute animated illustration">
+            <img class="no_container" autoplay loop src="/asset/no.mp4" alt="Cute animated illustration">
         </div>
         <a class="header_text" href="index.html">You can still try again! Click here</a>
     </div>
