--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="waitVideo" class="gif_container" style="display: none;">
             <div class="gif_container">
-                <video style="width: 600px; height: 600px;" autoplay loop src="/asset/wait.mp4"
+                <video style="width: 600px; height: 600px;" autoplay loop src="https://drive.google.com/uc?export=preview&id=1OH5fFdcWj5Z19rcI_ipntiryZbEAoHFM"
                     alt="Cute animated illustration">
             </div>
             </video>
