--- a/no.html
+++ b/no.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
-            <video class="no_container" autoplay loop src="https://drive.google.com/uc?export=preview&id=1OKATDWZttyC4IV29IwopcfmzvypgEfTD" alt="Cute animated illustration">
+            <video class="no_container" autoplay loop src="https://github.com/luckychdhr/luckychdhr.github.io/raw/main/assest/no.mp4" alt="Cute animated illustration">
         </div>
         <a class="header_text" href="index.html">You can still try again! Click here</a>
     </div>
