--- a/no.html
+++ b/no.html
@@ -10,7 +10,9 @@
     <div class="container">
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
-            <video class="no_container" autoplay loop src="https://github.com/luckychdhr/luckychdhr.github.io/raw/main/assest/no.mp4" alt="Cute animated illustration">
+<video class="no_container" autoplay loop alt="Cute animated illustration">
+<source src="https://github.com/luckychdhr/luckychdhr.github.io/raw/main/assest/no.mp4" type="video/mp4">
+</video>
         </div>
         <a class="header_text" href="index.html">You can still try again! Click here</a>
     </div>
