--- a/no.html
+++ b/no.html
@@ -11,7 +11,7 @@
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
 <video class="no_container" autoplay loop alt="Cute animated illustration">
-<source src="./assest/no.mp4" type="video/mp4">
+<source autoplay src="./assest/no.mp4" type="video/mp4">
 </video>
         </div>
         <a class="header_text" href="index.html">You can still try again! Click here</a>
