--- a/no.html
+++ b/no.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
-<video class="no_container" autoplay loop alt="Cute animated illustration">
+<video autoplay loop class="no_container" alt="Cute animated illustration">
 <source autoplay src="./assest/no.mp4" type="video/mp4">
 </video>
         </div>
