--- a/no.html
+++ b/no.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1 class="header_text">Sad &#128546</h1>
         <div class="gif_container">
-<video autoplay loop class="no_container" alt="Cute animated illustration">
-<source autoplay src="./assest/no.mp4" type="video/mp4">
+<video autoplay loop playsinline class="no_container" alt="Cute animated illustration">
+<source src="./assest/no.mp4" type="video/mp4">
 </video>
         </div>
         <a class="header_text" href="index.html">You can still try again! Click here</a>
