--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
         <div id="waitVideo" class="gif_container" style="display: none;">
             <div class="gif_container">
-                <video style="width: 600px; height: 600px;" autoplay loop src="https://drive.google.com/uc?export=preview&id=1OH5fFdcWj5Z19rcI_ipntiryZbEAoHFM"
-                    alt="Cute animated illustration">
+                <video autoplay loop playsinline muted style="width: 600px; height: 600px;" alt="Cute animated illustration">
+<source src="./assest/wait.mp4" type="video/mp4">
+</video>
             </div>
             </video>
             <div class="gif_container">
