--- a/yes.html
+++ b/yes.html
@@ -10,14 +10,18 @@
     
     <div class="yes_container">
         <div class="gif_container">
-            <video autoplay loop src="https://drive.google.com/uc?export=preview&id=1OL0SZVTbSosFeZTqz2kKbSPEDh-Ell97" alt="Cute animated illustration">
+            <video autoplay loop playsinline muted alt="Cute animated illustration">
+<source src="./assest/yes.mp4" type="video/mp4">
+</video>
         </div>
         <div>
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
             <h1 class="header_text1" >Yeeehhhhehhhyyyy!!</h1>
         </div>
         <div class="gif_container">
-            <video autoplay loop src="https://drive.google.com/uc?export=preview&id=1OKO5dACGWLZDYW3zx9r4nlOC255yusfi" alt="Cute animated illustration">
+            <video autoplay loop playsinline muted alt="Cute animated illustration">
+<source src="./assest/yes1.mp4" type="video/mp4">
+</video>
         </div>
     </div>
 </body>
