--- a/yes.html
+++ b/yes.html
@@ -17,6 +17,7 @@
         <div>
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
             <h1 class="header_text1" >Yeeehhhhehhhyyyy!!</h1>
+            <h1 class="header_text1" >Today between 8-9pm. Be Ready</h1>
         </div>
         <div class="gif_container">
             <video autoplay loop playsinline muted alt="Cute animated illustration">
