--- a/yes.html
+++ b/yes.html
@@ -14,7 +14,7 @@
 <source src="./assest/yes.mp4" type="video/mp4">
 </video>
         </div>
-        <div>
+         <div class="gif_container">
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
             <h1 class="header_text1" >Yeeehhhhehhhyyyy!!</h1>
             <h2 class="header_text1" >Today between 8-9pm. Be Ready</h2>
